--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <button id="showDailyViewBtn" class="btn btn-primary w-full">Daily View</button>
                 <button id="showMonthlyViewBtn" class="btn btn-secondary w-full">Monthly View</button>
                 <a id="Calculator" class="btn btn-secondary w-full" href="calculator.html">Calculator</a>
+                <button id="showKanbanViewBtn" class="btn btn-secondary w-full">Kanban View</button>
                 <button id="showAnalyticsViewBtn" class="btn btn-secondary w-full">Analytics</button>
             </nav>
 
@@ -456,4 +457,5 @@
 
     </div>
 </body>
+
 </html>
